kubernetes/kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: production
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-rhrs
        image: realhrsoft/realhrsoft:mac_be_v3
        #command: [/bin/bash]
        #stdin: true
        #tty: true
        volumeMounts:
          - name: static-media
            mountPath:  /static
          - name: static-media
            mountPath:  /media

        ports:
        - containerPort: 8000
      imagePullSecrets:
        - name: registry-secret

      volumes:
          - name: static-media
            persistentVolumeClaim:
            claimName: static-media-pvc
