kubernetes/kubernetes/db_deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: postgres-db
  namespace: database
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: postgres 
  template:
    metadata:
      labels: 
        app: postgres
    spec: 
      containers:
      - name: postgres
        image: postgres:14 
        ports:
        - containerPort: 5432
