kubernetes/kubernetes/redis_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: database
spec:
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                - name: redis
                  image: redis:5.0
                  ports:
                    - containerPort: 6379
