kubernetes/kubernetes/backend_service_expose.yml
apiVersion: v1
kind: Service
metadata:
    name: backend-service
    namespace: production
spec:
    selector:
        app: backend
    ports:
        - protocol: TCP
          port: 8000
          targetPort: 8000
    type: LoadBalancer
