kubernetes/kubernetes/db_service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: database
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
