kubernetes/kubernetes/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: production
spec:
    selector:
        app: frontend
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: LoadBalancer
