kubernetes/kubernetes/redis_service.yml
apiVersion: v1
kind: Service
metadata:
    name: redis
    namespace: database
spec:
    ports:
    - port: 6379
    selector:
        app: redis
